...
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DateTime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RGA-rv-XnY">
                                            <rect key="frame" x="20" y="11" width="153" height="18"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Kd-O8-ml8">
                                            <rect key="frame" x="20" y="73" width="88" height="21"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ROX-4T-nzX">
...
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ioj-aJ-Jld">
                                        <rect key="frame" x="0.0" y="0.0" width="231.66666666666666" height="128"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R08-Js-k8z">
                                                <rect key="frame" x="0.0" y="0.0" width="231.66666666666666" height="128"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                                <state key="normal" title="City, Country">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="bLocationTapped:" destination="qo5-5G-VSV" eventType="touchUpInside" id="bnM-zc-ax4"/>
                                                    <action selector="bRefresh:" destination="qo5-5G-VSV" eventType="touchUpInside" id="8a1-oq-jN1"/>
                                                </connections>
...
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5J9-Ha-FGu">
                                        <rect key="frame" x="0.0" y="568" width="231.66666666666666" height="128"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temp" textAlignment="center" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.25" translatesAutoresizingMaskIntoConstraints="NO" id="Idn-1E-4Iy">
                                                <rect key="frame" x="0.0" y="0.0" width="231.66666666666666" height="128"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
...
                        </subviews>
                        <color key="backgroundColor" red="0.0" green="0.56904578210000001" blue="0.57461684940000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <viewLayoutGuide key="safeArea" id="wXU-E2-0f7"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Current" id="6xI-Dq-EG0"/>
                    <navigationItem key="navigationItem" id="S04-k3-PnY">
                        <barButtonItem key="rightBarButtonItem" title="Forecast" id="Xek-KF-Ix5">
                            <connections>
                                <segue destination="wAa-ok-0SI" kind="show" identifier="showForecastTable" id="Xyc-L0-sw4"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
